; ModuleID = '/home/carl/AnghaBench/linux/drivers/base/extr_bus.c_drivers_autoprobe_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/base/extr_bus.c_drivers_autoprobe_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bus_type = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bus_type*, i8*, i64)* @drivers_autoprobe_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @drivers_autoprobe_store(%struct.bus_type* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.bus_type*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.bus_type* %0, %struct.bus_type** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = getelementptr inbounds i8, i8* %7, i64 0
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp eq i32 %10, 48
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load %struct.bus_type*, %struct.bus_type** %4, align 8
  %14 = getelementptr inbounds %struct.bus_type, %struct.bus_type* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 0, i32* %16, align 4
  br label %22

17:                                               ; preds = %3
  %18 = load %struct.bus_type*, %struct.bus_type** %4, align 8
  %19 = getelementptr inbounds %struct.bus_type, %struct.bus_type* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32 1, i32* %21, align 4
  br label %22

22:                                               ; preds = %17, %12
  %23 = load i64, i64* %6, align 8
  ret i64 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
